--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #f7f9ff;
     text-align: center;
-    padding: 20px;
+    margin: 0;
+    padding: 0%;
 }
 header {
     background-color: #20232a;
